Project

General

Profile

Actions

Bug #20386

closed

infinite loop in rest api for datalog list

Added by Casey Bodley almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel, kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When the max_entries argument is empty and the datalog has more than MAX_ENTRIES(1000) entries, the loop will reuse the same marker for each call to data_log->list_entries() and never complete.

https://github.com/ceph/ceph/pull/15841


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #20458: jewel: infinite loop in rest api for datalog listResolvedCasey BodleyActions
Copied to rgw - Backport #20459: kraken: infinite loop in rest api for datalog listRejectedActions
Actions #1

Updated by Orit Wasserman almost 7 years ago

  • Backport set to jewel, kraken
Actions #2

Updated by Casey Bodley almost 7 years ago

  • Priority changed from Normal to Urgent
Actions #3

Updated by Casey Bodley almost 7 years ago

opened https://github.com/ceph/ceph/pull/15983 with some additional changes

Actions #4

Updated by Casey Bodley almost 7 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Priority changed from Urgent to High
Actions #5

Updated by Casey Bodley almost 7 years ago

added trivial jewel backport at https://github.com/ceph/ceph/pull/15988

Actions #6

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20458: jewel: infinite loop in rest api for datalog list added
Actions #7

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20459: kraken: infinite loop in rest api for datalog list added
Actions #8

Updated by Orit Wasserman almost 7 years ago

  • Priority changed from High to Urgent
Actions #9

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF